css/80_app.css
/* ... */
/* Unstyle the active entity issue on hover */
.inspector-hover .section-entity-issues .issue-container.active {
    margin-top: 1px;
    margin-bottom: 1px;
}
.inspector-hover .section-entity-issues .issue-container * {
    border-color: #ccc !important;
}
.inspector-hover .section-entity-issues .issue-container.active .issue-label {
    border-bottom: 0;
}
.inspector-hover .section-entity-issues .issue-container.active .issue-label button.issue-text {
    font-weight: normal;
}


/* Styles for raw tag inspector on hover */
.inspector-hover .tag-row .key-wrap,
.inspector-hover .tag-row .value-wrap {
    height: 31px;
}

.inspector-hover .tag-row:first-child input.value {
    border-top-right-radius: 4px;
}
.ideditor[dir='rtl'] .inspector-hover .tag-row:first-child input.value {
    border-top-right-radius: 0;
    border-top-left-radius: 4px;
}

.inspector-hover .tag-row:last-child input.value {
    border-bottom-right-radius: 4px;
}
.ideditor[dir='rtl'] .inspector-hover .tag-row:last-child input.value {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 4px;
}

.inspector-hover .tag-row:last-child input.key {
    border-bottom-left-radius: 4px;
}
.ideditor[dir='rtl'] .inspector-hover .tag-row:last-child input.key {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 4px;
}

.inspector-hover .more-fields {
    max-height: 0;
    margin-bottom: -10px;
}

/* Unstyle button fields */
.inspector-hover .form-field-input-radio label.active,
.inspector-hover .entity-editor-pane a.hide-toggle {
    opacity: 1;
    background-color: transparent;
    color: #666;
    padding-left: 0;
    border-width: 0;
}
.inspector-hover .form-field-input-radio button.active {
    padding-left: 10px;
}

/* Show placeholder on hover for radio buttons */
.inspector-hover .form-field-input-radio {
    border: 1px solid #ccc;
    border-top: 0;
    border-radius: 0 0 4px 4px;
}
.inspector-hover .form-field-input-radio .placeholder {
    opacity: 1;
    color: #666;
    padding: 5px 10px;
    width: 100%;
    height: auto;
    border: 0;
}
.inspector-hover .form-field-input-radio .structure-extras-wrap {
    border: 0;
}


/* Raster Background Tiles
------------------------------------------------------- */
img.tile {
    position: absolute;
    transform-origin: 0 0;

    user-select: none;

    pointer-events: none;

    -webkit-user-drag: none;

    opacity: 0;

    transition: opacity 200ms linear;
}

img.tile-loaded {
    opacity: 1;
}

img.tile-removing {
    opacity: 0;
}

.tile-label-debug {
    font-size: 10px;
    background: rgba(0, 0, 0, 0.7);
    color: #fff;
    position: absolute;
    text-align: center;
    padding: 5px;
    border-radius: 3px;
    z-index: 2;
    margin-left: -70px;
    margin-top: -20px;

    transform-origin: 0 0;

    user-select: none;
}

img.tile-debug {
    outline: 1px solid red;
}


/* Map
------------------------------------------------------- */
.main-map {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow: hidden;
    height: 100%;
    width: 100%;
    background: #000;
    user-select: none;
    touch-action: none;
    -webkit-touch-callout: none;
}
.main-map * {
    touch-action: none;
}

.supersurface {
    transform-origin: 0 0;
}

.supersurface, .layer {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}


/* Map-In-Map
------------------------------------------------------- */
.map-in-map {
    position: absolute;
    overflow: hidden;
    top: 10px;
    width: 200px;
    height: 150px;
    z-index: 2;
    background: #000;
    border: #aaa 1px solid;
    border-radius: 4px;
    box-shadow: 0 0 2em black;
}
.ideditor[dir='ltr'] .map-in-map {
    left: 10px;
}
.ideditor[dir='rtl'] .map-in-map {
    right: 10px;
}

.map-in-map-tiles {
    transform-origin: 0 0;
    user-select: none;
}

.map-in-map-viewport,
.map-in-map-data {
    top: 0;
    left: 0;
    overflow: hidden;
    height: 100%;
    width: 100%;
}

.map-in-map-viewport {
    position: absolute;
}

.map-in-map-data {
    position: relative;
    z-index: 10;
}

.map-in-map-bbox {
    fill: none;
    stroke: rgba(255, 255, 0, 0.75);
    stroke-width: 1;
    shape-rendering: crispEdges;
}

.map-in-map-bbox.thick {
    stroke-width: 5;
}


/* Debug Data
------------------------------------------------------- */
.debug {
    stroke: currentColor;
    fill: none;
    stroke-width: 2;
}
.map-in-map-data .debug {
    stroke-width: 1;
}

.nocolor { color: rgba(0, 0, 0, 0); }
.red     { color: rgba(255, 0, 0, 0.75); }
.green   { color: rgba(0, 255, 0, 0.75); }
.blue    { color: rgba(176, 176, 255, 0.75); }
.yellow  { color: rgba(255, 255, 0, 0.75); }
.cyan    { color: rgba(0, 255, 255, 0.75); }
.magenta { color: rgba(255, 0, 255, 0.75); }
.orange  { color: rgba(255, 153, 0, 0.75); }
.pink    { color: rgba(255, 0, 153, 0.75); }
.purple  { color: rgba(153, 0, 255, 0.75); }

.debug-legend {
    position: absolute;
    top: 70px;
    right: 80px;
    padding: 5px;
    border-radius: 4px;
    pointer-events: none;
}

.debug-legend-item {
    padding-right: 5px;
}
.debug-legend-item:before {
    content: "\25A0";
    padding: 0 5px;
}


/* Information Panels
------------------------------------------------------- */
.info-panels {
    display: flex;
    flex-flow: row wrap-reverse;
    justify-content: flex-end;
    width: 100%;
    z-index: 1;
    -ms-user-select: element;
    pointer-events: none;
    overflow: hidden;
}

.panel-container h1,
.panel-container h2,
.panel-container h3,
.panel-container h4,
.panel-container h5 {
    display: inline-block;
    margin-bottom: 0;
}

.panel-container h1,
.panel-container h2,
.panel-container h3 {
    color: #ff8;
}

.panel-container {
    flex: 0 0 auto;
    margin: 0 2px 2px 0;
    border-radius: 4px;
    border: 1px solid rgba(0, 0, 0, 0.75);
    padding-bottom: 10px;
    width: 250px;
    max-width: 100%;
    pointer-events: auto;
}
/* ... */

